--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,5 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <Button android:text="Test sets" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
-    <Button android:text="Take test" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
+    <Button android:text="Take test" android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
+    <Button android:text="Test settings" android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
+    
 </LinearLayout>
