--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,8 +3,8 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <Button android:text="Test sets" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
-    <Button android:text="Take test" android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
-    <Button android:text="Test settings" android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
+    <Button android:text="Test sets" android:id="@+id/test_sets" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
+    <Button android:text="Take test" android:id="@+id/take_test" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
+    <Button android:text="Test settings" android:id="@+id/settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></Button>
     
 </LinearLayout>
